# python-poetry-auto-template

./: README.md  cookiecutter.json  readme.md  requirements.dev.txt
.github/workflows/: setup.yml  template_setup.yml  template_test.yml  test.yml
tests/: test_cookie.py
{{cookiecutter.hyphenated}}/: Dockerfile  pyproject.toml
{{cookiecutter.hyphenated}}/.devcontainer/: devcontainer.json
{{cookiecutter.hyphenated}}/.github/workflows/: test.yml
